--- a/CodeForU/templates/layout.html
+++ b/CodeForU/templates/layout.html
@@ -171,7 +171,7 @@
       
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-          <a href={% if user.is_student %} "/users/student_dashboard" {% elif user.is_mentor %} "/users/mentor_dashboard" {% endif %} class="nav-item nav-link custom-button">Home</a>
+          <a href= {% if user.is_student %} {% url 'users:student_dashboard' %} {% elif user.is_mentor %} {% url 'users:mentor_dashboard' %} {% endif %} class="nav-item nav-link custom-button">Home</a>
           <a href="{% url 'users:questions_list' %}" class="nav-item nav-link custom-button"
             >Questions</a
           >
